--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #f5f5f5;
+$secondary: #c70074;
+$accent: #a10a69;
+$grey: #ccc;
+$dark: #454545;
 
-$dark      : #1D1D1D;
-
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #08cca2;
+$negative: #fc7905;
+$info: #8ec6de;
+$warning: #f2db41;
