--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,13 +12,16 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #f5f5f5;
+$primary: #cccccc;
 $secondary: #c70074;
 $accent: #a10a69;
-$grey: #ccc;
+$grey: #787878;
 $dark: #454545;
 
-$positive: #08cca2;
+$positive: #009966;
 $negative: #fc7905;
 $info: #8ec6de;
 $warning: #f2db41;
+
+$button-border-radius: 0px;
+$generic-border-radius: 0px;
