--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #cccccc;
+$primary: #e0e0e0;
 $secondary: #c70074;
 $accent: #a10a69;
-$grey: #787878;
+$grey: #8e8e8e;
 $dark: #454545;
 
 $positive: #009966;
-$negative: #fc7905;
+$negative: #cc3333;
 $info: #8ec6de;
 $warning: #f2db41;
 
